add 2025 day 04